<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical"
    android:padding="6dp">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:maxLines="4"
        android:minLines="3"
        android:text="@string/smscode_title"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:maxLines="4"
        android:minLines="3"
        android:text="@string/smscode_description"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/smstoken_edit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/description_text"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_smstoken_shape"
        android:gravity="center"
        android:hint="* * * * *"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:minHeight="45dp"
        android:textColor="#000000"
        android:textColorHint="#b4b4bf"
        android:textSize="28sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/checkcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smstoken_edit"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_checkcode_shape"
        android:minHeight="60dp"
        android:typeface="monospace"
        android:text="@string/checkcode_button_text"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/smstoken_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkcode_button"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/change_mobile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_horizontal|right"
            android:text="@string/smscode_change_mobile_number"
            android:textColor="#ffffff"
            android:clickable="true"
            android:textSize="14sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/seprator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•"
            android:clickable="false"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/resend_smstoken_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal|left"
            android:layout_weight="1.0"
            android:text="@string/smscode_resend_smstoken"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:typeface="monospace"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/smscode_bg_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/splash_esfahan_bg" />
</RelativeLayout>